Fix dependency ids

--- a/agora/umbrel-app.yml
+++ b/agora/umbrel-app.yml
@@ -13,7 +13,7 @@ description: >-
 developer: Casey Rodarmor & Sönke Hahn
 website: https://agora-org.github.io/agora/
 dependencies:
-  - lnd
+  - lightning
 repo: https://github.com/agora-org/agora
 support: https://t.me/agoradiscussion
 port: 12080
