--- a/bitfeed/umbrel-app.yml
+++ b/bitfeed/umbrel-app.yml
@@ -16,7 +16,7 @@ description: >-
 developer: Mononaut
 website: https://monospace.live
 dependencies:
-  - bitcoind
+  - bitcoin
 repo: https://github.com/bitfeed-project/bitfeed
 support: https://github.com/bitfeed-project/bitfeed/issues
 port: 8314
