--- a/bleskomat-server/umbrel-app.yml
+++ b/bleskomat-server/umbrel-app.yml
@@ -12,7 +12,7 @@ description: The Bleskomat ATM is the next generation Bitcoin Lightning ATM.
 developer: Bleskomat
 website: https://www.bleskomat.com
 dependencies:
-  - lnd
+  - lightning
 repo: https://github.com/samotari/bleskomat-server
 support: https://t.me/bleskomat
 port: 3333
