--- a/bluewallet/umbrel-app.yml
+++ b/bluewallet/umbrel-app.yml
@@ -14,7 +14,7 @@ description: >-
 developer: BlueWallet
 website: https://lndhub.io
 dependencies:
-  - lnd
+  - lightning
 repo: https://github.com/BlueWallet/LndHub
 support: https://t.me/bluewallet
 port: 3008
