--- a/btc-rpc-explorer/umbrel-app.yml
+++ b/btc-rpc-explorer/umbrel-app.yml
@@ -18,8 +18,8 @@ description: >-
 developer: Dan Janosik
 website: https://explorer.btc21.org
 dependencies:
-  - bitcoind
-  - electrum
+  - bitcoin
+  - electrs
 repo: https://github.com/janoside/btc-rpc-explorer
 support: https://github.com/janoside/btc-rpc-explorer/discussions
 port: 3002
