--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -21,8 +21,8 @@ description: >-
 developer: BTCPay Server Foundation
 website: https://btcpayserver.org
 dependencies:
-  - bitcoind
-  - lnd
+  - bitcoin
+  - lightning
 repo: https://github.com/btcpayserver/btcpayserver
 support: https://chat.btcpayserver.org
 port: 3003
