--- a/helipad/umbrel-app.yml
+++ b/helipad/umbrel-app.yml
@@ -9,7 +9,7 @@ description: Helipad shows boosts and boostagram messages coming in to your
 developer: Podcastindex.org
 website: https://podcastindex.org
 dependencies:
-  - lnd
+  - lightning
 repo: https://github.com/Podcastindex-org/helipad
 support: https://podcastindex.social
 port: 2112
