--- a/itchysats/umbrel-app.yml
+++ b/itchysats/umbrel-app.yml
@@ -44,7 +44,7 @@ description: >-
 developer: ItchySats
 website: https://itchysats.network
 dependencies:
-  - electrum
+  - electrs
 repo: https://github.com/itchysats/itchysats
 support: https://github.com/itchysats/itchysats/issues
 port: 7113
