--- a/jam/umbrel-app.yml
+++ b/jam/umbrel-app.yml
@@ -15,7 +15,7 @@ description: >-
 developer: JoinMarket WebUI Organisation
 website: https://github.com/joinmarket-webui
 dependencies:
-  - bitcoind
+  - bitcoin
 repo: https://github.com/joinmarket-webui/joinmarket-webui
 support: https://github.com/joinmarket-webui/joinmarket-webui/issues
 port: 5002
