--- a/kollider/umbrel-app.yml
+++ b/kollider/umbrel-app.yml
@@ -19,7 +19,7 @@ description: >-
 developer: Kollider
 website: https://kollider.xyz
 dependencies:
-  - lnd
+  - lightning
 repo: https://github.com/kolliderhq/kollider-lite-app
 support: https://t.me/kolliderhq
 port: 4243
