--- a/lightning-shell/umbrel-app.yml
+++ b/lightning-shell/umbrel-app.yml
@@ -21,8 +21,8 @@ description: >
 developer: Ioan Bizău
 website: https://lightningshell.app
 dependencies:
-  - lnd
-  - bitcoind
+  - lightning
+  - bitcoin
 repo: https://ibz.github.io/lightning-shell/
 support: https://ibz.github.io/lightning-shell/issues
 port: 7681
