--- a/lightning-terminal/umbrel-app.yml
+++ b/lightning-terminal/umbrel-app.yml
@@ -37,7 +37,7 @@ description: >-
 developer: Lightning Labs
 website: https://lightning.engineering
 dependencies:
-  - lnd
+  - lightning
 repo: https://github.com/lightninglabs/lightning-terminal
 support: https://github.com/lightninglabs/lightning-terminal/issues/new
 port: 3004
