--- a/lnbits/umbrel-app.yml
+++ b/lnbits/umbrel-app.yml
@@ -16,7 +16,7 @@ description: >-
 developer: LNbits
 website: https://github.com/lnbits/lnbits-legend
 dependencies:
-  - lnd
+  - lightning
 repo: https://github.com/lnbits/lnbits-legend
 support: https://t.me/lnbits
 port: 3007
