--- a/lndg/umbrel-app.yml
+++ b/lndg/umbrel-app.yml
@@ -10,7 +10,7 @@ description: LNDg is your command center for running a profitable and efficient
 developer: cryptosharks131
 website: https://github.com/cryptosharks131
 dependencies:
-  - lnd
+  - lightning
 repo: https://github.com/cryptosharks131/lndg
 support: https://t.me/+-RxoZdi7snk2ZGYx
 port: 8889
