--- a/lnmarkets/umbrel-app.yml
+++ b/lnmarkets/umbrel-app.yml
@@ -19,7 +19,7 @@ description: >-
 developer: LN Markets
 website: https://lnmarkets.com
 dependencies:
-  - lnd
+  - lightning
 repo: https://github.com/ln-markets/umbrel
 support: https://discord.gg/5HwDJFx2Jz
 port: 4242
