--- a/mempool/umbrel-app.yml
+++ b/mempool/umbrel-app.yml
@@ -34,8 +34,8 @@ description: >-
 developer: Mempool Space K.K.
 website: https://mempool.space/about
 dependencies:
-  - bitcoind
-  - electrum
+  - bitcoin
+  - electrs
 repo: https://github.com/mempool/mempool
 support: https://mempool.support
 port: 3006
