--- a/node-red/umbrel-app.yml
+++ b/node-red/umbrel-app.yml
@@ -19,9 +19,9 @@ description: >-
 developer: OpenJS Foundation
 website: https://nodered.org
 dependencies:
-  - bitcoind
-  - electrum
-  - lnd
+  - bitcoin
+  - electrs
+  - lightning
 repo: https://github.com/node-red/node-red
 support: https://nodered.org/about/community/slack/
 port: 1880
