--- a/samourai-server/umbrel-app.yml
+++ b/samourai-server/umbrel-app.yml
@@ -19,7 +19,7 @@ description: >-
 developer: Samourai
 website: https://samouraiwallet.com
 dependencies:
-  - bitcoind
+  - bitcoin
 repo: https://github.com/louneskmt/umbrel-samourai-dojo/tree/v1.13.0-umbrel
 support: https://t.me/SamouraiWallet
 port: 3005
