--- a/satsale/umbrel-app.yml
+++ b/satsale/umbrel-app.yml
@@ -23,7 +23,7 @@ description: >-
 developer: Nick Farrow
 website: https://satsale.org
 dependencies:
-  - lnd
+  - lightning
 repo: https://github.com/nickfarrow/SatSale/
 support: https://github.com/nickfarrow/SatSale/issues
 port: 5000
