--- a/sparkkiosk/umbrel-app.yml
+++ b/sparkkiosk/umbrel-app.yml
@@ -14,7 +14,7 @@ description: >-
 developer: Jens Gertsen
 website: https://github.com/jensgertsen/sparkkiosk
 dependencies:
-  - lnd
+  - lightning
 repo: https://github.com/jensgertsen/sparkkiosk
 support: https://github.com/jensgertsen/sparkkiosk/discussions
 port: 21214
