--- a/specter-desktop/umbrel-app.yml
+++ b/specter-desktop/umbrel-app.yml
@@ -32,7 +32,7 @@ description: >-
 developer: Crypto Advance
 website: https://specter.solutions
 dependencies:
-  - bitcoind
+  - bitcoin
 repo: https://github.com/cryptoadvance/specter-desktop
 support: https://t.me/spectersupport
 port: 25441
