--- a/sphinx-relay/umbrel-app.yml
+++ b/sphinx-relay/umbrel-app.yml
@@ -18,7 +18,7 @@ description: >-
 developer: Stakwork
 website: https://sphinx.chat
 dependencies:
-  - lnd
+  - lightning
 repo: https://github.com/stakwork/sphinx-relay
 support: https://t.me/joinchat/Fb4OcRo4LrRD6NXfsNdeeQ
 port: 3300
