--- a/suredbits-wallet/umbrel-app.yml
+++ b/suredbits-wallet/umbrel-app.yml
@@ -16,7 +16,7 @@ description: >-
 developer: Suredbits
 website: https://suredbits.com
 dependencies:
-  - bitcoind
+  - bitcoin
 repo: https://github.com/bitcoin-s/bitcoin-s
 support: https://t.me/suredbits
 port: 3020
