--- a/tallycoin-connect/umbrel-app.yml
+++ b/tallycoin-connect/umbrel-app.yml
@@ -11,7 +11,7 @@ description: Tallycoin is a crowdfunding platform built on top of the Bitcoin
 developer: djbooth007
 website: https://github.com/djbooth007/tallycoin_connect
 dependencies:
-  - lnd
+  - lightning
 repo: https://github.com/djbooth007/tallycoin_connect
 support: https://github.com/djbooth007/tallycoin_connect/issues
 port: 8123
