--- a/thunderhub/umbrel-app.yml
+++ b/thunderhub/umbrel-app.yml
@@ -16,7 +16,7 @@ description: >-
 developer: Anthony Potdevin
 website: https://apotdevin.com
 dependencies:
-  - lnd
+  - lightning
 repo: https://github.com/apotdevin/thunderhub
 support: https://t.me/thunderhub
 port: 3000
