--- a/urbit-bitcoin-connector/umbrel-app.yml
+++ b/urbit-bitcoin-connector/umbrel-app.yml
@@ -22,8 +22,8 @@ description: >-
 developer: ~sitful-hatred & ~mopfel-winrux
 website: https://subject.network
 dependencies:
-  - bitcoind
-  - electrum
+  - bitcoin
+  - electrs
 repo: https://github.com/yapishu/urbit-bitcoin-node
 support: https://github.com/yapishu/urbit-bitcoin-node
 port: 9090
