--- a/usocial/umbrel-app.yml
+++ b/usocial/umbrel-app.yml
@@ -23,7 +23,7 @@ description: >-
 developer: Ioan Bizău
 website: http://usocial.me
 dependencies:
-  - lnd
+  - lightning
 repo: https://github.com/ibz/usocial
 support: https://github.com/ibz/usocial/issues
 port: 8448
