--- a/ride-the-lightning/umbrel-app.yml
+++ b/ride-the-lightning/umbrel-app.yml
@@ -31,7 +31,7 @@ description: >-
 developer: Shahana and Suheb
 website: https://github.com/Ride-The-Lightning/RTL
 dependencies:
-  - lnd
+  - lightning
 repo: https://github.com/Ride-The-Lightning/RTL
 support: https://github.com/Ride-The-Lightning/RTL/issues/new
 port: 3001
