--- a/squeaknode/umbrel-app.yml
+++ b/squeaknode/umbrel-app.yml
@@ -14,8 +14,8 @@ description: >-
 developer: Jonathan Zernik
 website: https://squeaknode.org
 dependencies:
-  - bitcoind
-  - lnd
+  - bitcoin
+  - lightning
 repo: https://github.com/squeaknode/squeaknode
 support: https://github.com/squeaknode/squeaknode/discussions
 port: 12994
