--- a/elements/umbrel-app.yml
+++ b/elements/umbrel-app.yml
@@ -10,7 +10,7 @@ description: Elements is an open source full node implementation to run the Liqu
 developer: Elements Core Developers
 website: https://elementsproject.org
 dependencies:
-- bitcoind
+- bitcoin
 repo: https://github.com/ElementsProject/elements
 support: https://t.me/liquid_community
 port: 3042
