Fix Bitcoin Core env vars

--- a/elements/docker-compose.yml
+++ b/elements/docker-compose.yml
@@ -24,10 +24,10 @@ services:
       - -validatepegin=1
       - -fallbackfee=0.000001
       # Attach to Bitcoin network
-      - -mainchainrpchost=$BITCOIN_IP
-      - -mainchainrpcport=$BITCOIN_RPC_PORT
-      - -mainchainrpcuser=$BITCOIN_RPC_USER
-      - -mainchainrpcpassword=$BITCOIN_RPC_PASS
+      - -mainchainrpchost=$APP_BITCOIN_NODE_IP
+      - -mainchainrpcport=$APP_BITCOIN_RPC_PORT
+      - -mainchainrpcuser=$APP_BITCOIN_RPC_USER
+      - -mainchainrpcpassword=$APP_BITCOIN_RPC_PASS
       # Elements RPC
       - -rpcuser=elements
       - -rpcpassword=$APP_PASSWORD
