Add missing Bitcoin env vars

--- a/bitcoin/docker-compose.yml
+++ b/bitcoin/docker-compose.yml
@@ -14,10 +14,14 @@ services:
       PORT: "3005"
       BITCOIN_HOST: "${APP_BITCOIN_NODE_IP}"
       RPC_PORT: "${APP_BITCOIN_RPC_PORT}"
+      BITCOIN_RPC_PORT: "${APP_BITCOIN_RPC_PORT}"
       RPC_USER: "${APP_BITCOIN_RPC_USER}"
+      BITCOIN_RPC_USER: "${APP_BITCOIN_RPC_USER}"
       RPC_PASSWORD: "${APP_BITCOIN_RPC_PASS}"
+      BITCOIN_RPC_PASSWORD: "${APP_BITCOIN_RPC_PASS}"
       BITCOIN_RPC_HIDDEN_SERVICE: "${APP_BITCOIN_RPC_HIDDEN_SERVICE}"
       BITCOIN_P2P_HIDDEN_SERVICE: "${APP_BITCOIN_P2P_HIDDEN_SERVICE}"
+      BITCOIN_P2P_PORT: "${APP_BITCOIN_P2P_PORT}"
     networks:
       default:
         ipv4_address: $APP_BITCOIN_IP
