Add missing agora env var

--- a/agora/docker-compose.yml
+++ b/agora/docker-compose.yml
@@ -55,6 +55,7 @@ services:
       NGINX_ENVSUBST_OUTPUT_DIR: /etc/nginx/
       APP_AGORA_SERVER_IP: $APP_AGORA_SERVER_IP
       APP_AGORA_FILEBROWSER_IP: $APP_AGORA_FILEBROWSER_IP
+      APP_HIDDEN_SERVICE: $APP_HIDDEN_SERVICE
     depends_on:
       - agora
       - filebrowser
