Fix LND Tor env vars

--- a/lightning/docker-compose.yml
+++ b/lightning/docker-compose.yml
@@ -23,8 +23,8 @@ services:
       RPC_PASSWORD: "${APP_BITCOIN_RPC_PASS}"
       LND_NETWORK: "${APP_BITCOIN_NETWORK}"
       LND_HOST: "${APP_LIGHTNING_NODE_IP}"
-      LND_REST_HIDDEN_SERVICE_FILE: "${APP_LIGHTNING_REST_HIDDEN_SERVICE}"
-      LND_GRPC_HIDDEN_SERVICE_FILE: "${APP_LIGHTNING_GRPC_HIDDEN_SERVICE}"
+      LND_REST_HIDDEN_SERVICE: "${APP_LIGHTNING_REST_HIDDEN_SERVICE}"
+      LND_GRPC_HIDDEN_SERVICE: "${APP_LIGHTNING_GRPC_HIDDEN_SERVICE}"
       TLS_FILE: "/data/.lnd/tls.cert"
       MACAROON_DIR: "/data/.lnd/data/chain/bitcoin/${APP_BITCOIN_NETWORK}/"
       CHANNEL_BACKUP_FILE: "/data/.lnd/data/chain/bitcoin/${APP_BITCOIN_NETWORK}/channel.backup"
