Fix for electrs bitcoin network env var

--- a/electrs/docker-compose.yml
+++ b/electrs/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     restart: always
     environment:
       ELECTRS_LOG_FILTERS: "INFO"
-      ELECTRS_NETWORK: "${APP_BITCOIN_NETWORK}"
+      ELECTRS_NETWORK: "${APP_BITCOIN_NETWORK_ELECTRS}"
       ELECTRS_DAEMON_RPC_ADDR: "${APP_BITCOIN_NODE_IP}:${APP_BITCOIN_RPC_PORT}"
       ELECTRS_DAEMON_P2P_ADDR: "${APP_BITCOIN_NODE_IP}:${APP_BITCOIN_P2P_PORT}"
       ELECTRS_ELECTRUM_RPC_ADDR: "0.0.0.0:${APP_ELECTRS_NODE_PORT}"
