--- a/electrs/docker-compose.yml
+++ b/electrs/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       BITCOIN_HOST: "${APP_BITCOIN_NODE_IP}"
       RPC_USER: "${APP_BITCOIN_RPC_USER}"
       RPC_PASSWORD: "${APP_BITCOIN_RPC_PASS}"
+      RPC_PORT: "${APP_BITCOIN_RPC_PORT}"
     networks:
       default:
         ipv4_address: $APP_ELECTRS_IP
