--- a/home-assistant/docker-compose.yml
+++ b/home-assistant/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     image: homeassistant/home-assistant:2021.12.0@sha256:116f78d5cf48c4b1adcb3eb665885cb0d14dc0156e9291015ca6fbce13540ff5
     volumes:
       - ${APP_DATA_DIR}/data:/config
+      - ${APP_DATA_DIR}/configuration.yaml:/config/configuration.yaml
     networks:
       default:
         ipv4_address: $APP_HOME_ASSISTANT_IP
