Use master builds of bitcoin/electrs/lightning apps

--- a/bitcoin/docker-compose.yml
+++ b/bitcoin/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 3005
   
   server:
-    image: cookiemonster123/umbrel-bitcoin:v0.2.0@sha256:74fcac4f811ca0451a6ff108087298f752759b0be9d6c7b116642497dd702a27
+    image: cookiemonster123/umbrel-bitcoin:master
     depends_on: [bitcoind]
     restart: on-failure
     environment:
