--- a/lightning/docker-compose.yml
+++ b/lightning/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 3006
 
   app:
-    image: cookiemonster123/umbrel-lightning:v1.0.2@sha256:41d651ec0ba1fba9173bd06cbf2a1093dd2ba0485432aea177a9255ae3211934
+    image: cookiemonster123/umbrel-lightning:master
     restart: on-failure
     volumes:
       - "${APP_LIGHTNING_NODE_DATA_DIR}:/data/.lnd"
