--- a/electrs/docker-compose.yml
+++ b/electrs/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 3006
 
   app:
-    image: cookiemonster123/umbrel-electrs:v1.0.1@sha256:0a447406c64523b30429d8d70751e6bc19b3fdb830b778555d3904a6cce2f5b5
+    image: cookiemonster123/umbrel-electrs:master
     depends_on:
       - electrs
     restart: on-failure
