Add bitcoin as deps to LND and Electrs

--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -8,7 +8,8 @@ description: >
   "there was lightning before the thunder"
 developer: Umbrel
 website: https://getumbrel.com/
-dependencies: []
+dependencies:
+  - bitcoin
 repo: https://github.com/getumbrel/lightning
 support: https://github.com/getumbrel/lightning/issues
 port: 10001
