--- a/electrs/umbrel-app.yml
+++ b/electrs/umbrel-app.yml
@@ -8,7 +8,8 @@ description: >
   Description goes here
 developer: Umbrel
 website: https://getumbrel.com/
-dependencies: []
+dependencies:
+  - bitcoin
 repo: https://github.com/getumbrel/electrs
 support: https://github.com/getumbrel/electrs/issues
 port: 10002
