Add DEVICE_DOMAIN_NAME to Lightning

--- a/lightning/docker-compose.yml
+++ b/lightning/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       CHANNEL_BACKUP_FILE: "/data/.lnd/data/chain/bitcoin/${APP_BITCOIN_NETWORK}/channel.backup"
       BACKUP_STATUS_FILE: "/statuses/backup-status.json"
       JSON_STORE_FILE: "/data/state.json"
+      DEVICE_DOMAIN_NAME: "${DEVICE_DOMAIN_NAME}"
     networks:
       default:
         ipv4_address: $APP_LIGHTNING_IP
