Update bitcoin, electrs and lightning app manifests

--- a/bitcoin/umbrel-app.yml
+++ b/bitcoin/umbrel-app.yml
@@ -1,20 +1,35 @@
 manifestVersion: 1
 id: bitcoin
 category: Finance
-name: Bitcoin
-version: v22.0
-tagline: Bitcoins are amazing
-description: >
-  Bitcoin is the knees of the bee
+name: Bitcoin Node
+version: 22.0
+tagline: Run your personal node powered by Bitcoin Core
+description: >-
+  Run your Bitcoin node and independently store and validate
+  every single Bitcoin transaction with it. Achieve unparalleled
+  privacy by connecting your wallet directly to your node to
+  ensure that your wallet company can’t spy on your transactions,
+  or worse — lie to you.
+
+
+  Plus, transacting with your own node also helps keep the entire
+  Bitcoin network decentralized; win-win!
+
+
+  Don't trust. Verify. On steroids.
+
+
+  An official app from Umbrel.
 developer: Umbrel
-website: https://bitcoin.org
+website: https://umbrel.com
 dependencies: []
-repo: https://github.com/getumbrel/bitcoin
-support: https://github.com/getumbrel/bitcoin/issues
-port: 10000
+repo: https://github.com/getumbrel/umbrel-bitcoin
+support: https://community.getumbrel.com/c/bitcoin-and-lightning
+port: 2100
 gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
+  - 4.jpg
 path: ""
 defaultPassword: ""
