--- a/electrs/umbrel-app.yml
+++ b/electrs/umbrel-app.yml
@@ -2,20 +2,28 @@ manifestVersion: 1
 id: electrs
 category: Finance
 name: Electrs
-version: v0.14.1-beta
-tagline: Electrs needs a tagline
+version: 0.9.4
+tagline: A simple and efficient Electrum Server
 description: >
-  Description goes here
+  Run your personal Electrum server and connect your Electrum-compatible wallet,
+  including BitBoxApp, BlueWallet, Electrum Wallet (Android and Desktop), Nunchuk 
+  (Desktop), Phoenix, and Sparrow Wallet to it instead of using a third-party
+  Electrum server.
+
+  Powered by Electrs from Roman Zeyde.
+
+  An official app from Umbrel.
 developer: Umbrel
-website: https://getumbrel.com/
+website: https://umbrel.com/
 dependencies:
   - bitcoin
-repo: https://github.com/getumbrel/electrs
-support: https://github.com/getumbrel/electrs/issues
-port: 10002
+repo: https://github.com/getumbrel/umbrel-electrs
+support: https://community.getumbrel.com/c/bitcoin-and-lightning
+port: 2102
 gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
+  - 4.jpg
 path: ""
 defaultPassword: ""
