--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -1,21 +1,38 @@
 manifestVersion: 1
 id: lightning
 category: Finance
-name: Lightning
-version: v0.14.1-beta
-tagline: LND is cool too
-description: >
-  "there was lightning before the thunder"
+name: Lightning Node
+version: 0.14.2-beta
+tagline: Run your personal Lightning Network node
+description: >-
+  Run your personal Lightning Network node, and join the future of Bitcoin today.
+
+
+  The Lightning Network allows ultra cheap and almost instant Bitcoin transactions.
+  By running a Lightning node, you can not only self-custody your Bitcoin on
+  Lightning, but also earn sats by routing payments on the network.
+
+
+  Connect Zeus Wallet, Zap, or any other wallet that supports the lndconnect protocol
+  to remotely manage and access your Lightning node from anywhere.
+
+
+  Powered by LND.
+
+
+  An official app from Umbrel.
 developer: Umbrel
-website: https://getumbrel.com/
+website: https://umbrel.com
 dependencies:
   - bitcoin
-repo: https://github.com/getumbrel/lightning
-support: https://github.com/getumbrel/lightning/issues
-port: 10001
+repo: https://github.com/getumbrel/umbrel-lightning
+support: https://community.getumbrel.com/c/bitcoin-and-lightning
+port: 2101
 gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
+  - 4.jpg
+  - 5.jpg
 path: ""
 defaultPassword: ""
