Drop 'v' version prefix

--- a/agora/umbrel-app.yml
+++ b/agora/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: agora
 category: Files
 name: Agora
-version: v0.1.2
+version: 0.1.2
 tagline: Sell your files for Bitcoin
 description: >-
   Agora is a project that allows anyone to sell files on the web for
