--- a/itchysats/umbrel-app.yml
+++ b/itchysats/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: itchysats
 category: Finance
 name: ItchySats
-version: v0.4.16
+version: 0.4.16
 tagline: Peer-2-peer derivatives on Bitcoin
 description: >-
   ItchySats enables peer-2-peer CFD trading on Bitcoin using DLCs
