--- a/bleskomat-server/umbrel-app.yml
+++ b/bleskomat-server/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: bleskomat-server
 category: Wallet Servers
 name: Bleskomat Server
-version: v1.3.4
+version: 1.3.4
 tagline: Connect a Bleskomat ATM to your Lightning node
 description: The Bleskomat ATM is the next generation Bitcoin Lightning ATM.
   This app will allow you to easily connect your Bleskomat ATM to the Lightning
