--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -14,7 +14,7 @@ description: >-
 
 
   Connect Zeus Wallet, Zap, or any other wallet that supports the lndconnect protocol
-  to remotely manage and access your Lightning node from anywhere.
+  to remotely manage and access your node from anywhere.
 
 
   Powered by LND.
