--- a/bitfeed/umbrel-app.yml
+++ b/bitfeed/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: bitfeed
 category: Explorers
 name: Bitfeed
-version: 2.2.1
+version: "2.2.1"
 tagline: A live visualization of your node's mempool
 description: >-
   A self-hosted version of Bitfeed - the open source mempool & block
