--- a/bluewallet/umbrel-app.yml
+++ b/bluewallet/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: bluewallet
 category: Wallet Servers
 name: BlueWallet Lightning
-version: 1.4.1
+version: "1.4.1"
 tagline: Connect BlueWallet to your Lightning node
 description: >-
   Run BlueWallet in the most private and secure way possible by
