--- a/btc-rpc-explorer/umbrel-app.yml
+++ b/btc-rpc-explorer/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: btc-rpc-explorer
 category: Explorers
 name: BTC RPC Explorer
-version: 3.3.0
+version: "3.3.0"
 tagline: Simple, database-free blockchain explorer
 description: >-
   BTC RPC Explorer is a full-featured, self-hosted explorer for the
