--- a/code-server/umbrel-app.yml
+++ b/code-server/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: code-server
 category: Development
 name: code-server
-version: 3.11.1
+version: "3.11.1"
 tagline: Run VS Code on your Umbrel
 description: >-
   Run VS Code on your Umbrel and access it in the browser so you can
