--- a/krystal-bull/umbrel-app.yml
+++ b/krystal-bull/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: krystal-bull
 category: Finance
 name: Krystal Bull
-version: 1.9.0-91-ddabc912
+version: "1.9.0-91-ddabc912"
 tagline: Become an oracle and create Bitcoin bets
 description: >-
   Krystal Bull allows you to become a Bitcoin oracle. An oracle
