--- a/nextcloud/umbrel-app.yml
+++ b/nextcloud/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: nextcloud
 category: Files
 name: Nextcloud
-version: 22.1.1
+version: "22.1.1"
 tagline: Productivity platform that keeps you in control
 description: >-
   Nextcloud puts your data at your fingertips, under your control.
