--- a/snowflake/umbrel-app.yml
+++ b/snowflake/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: snowflake
 category: Networking
 name: Tor Snowflake Proxy
-version: 2.1.0
+version: "2.1.0"
 tagline: Help defeat internet censorship
 description: >-
   Snowflake is a system to defeat internet censorship. People who are
