--- a/sparkkiosk/umbrel-app.yml
+++ b/sparkkiosk/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: sparkkiosk
 category: Finance
 name: Sparkkiosk
-version: 1.0.0
+version: "1.0.0"
 tagline: Minimal LNURL kiosk
 description: >-
   Use sparkkiosk to enable lightning payments from printed QR codes
