--- a/synapse/umbrel-app.yml
+++ b/synapse/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: synapse
 category: Social
 name: Synapse
-version: 1.42.0
+version: "1.42.0"
 tagline: Matrix reference homeserver
 description: >-
   Synapse is a reference "homeserver" implementation of Matrix from
