--- a/tallycoin-connect/umbrel-app.yml
+++ b/tallycoin-connect/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: tallycoin-connect
 category: Finance
 name: Tallycoin Connect
-version: 1.7.3
+version: "1.7.3"
 tagline: Connect Tallycoin with your Umbrel node
 description: Tallycoin is a crowdfunding platform built on top of the Bitcoin
   blockchain. Every satoshi donated to you, belongs to you. Tallycoin takes no
