--- a/urbit-bitcoin-connector/umbrel-app.yml
+++ b/urbit-bitcoin-connector/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: urbit-bitcoin-connector
 category: Wallet Servers
 name: Urbit Bitcoin Connector
-version: 0.1.0
+version: "0.1.0"
 tagline: Connect your Urbit's Bitcoin wallet to your Bitcoin node
 description: >-
   Urbit has a native Bitcoin wallet that you can connect to a full
