--- a/element/umbrel-app.yml
+++ b/element/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: element
 category: Social
 name: Element
-version: 1.8.4
+version: "1.8.4"
 tagline: A glossy Matrix client compatible with Synapse
 description: >-
   Element is a new type of messaging app. You choose where your
