--- a/elements/umbrel-app.yml
+++ b/elements/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: elements
 category: Wallet Servers
 name: Elements Core
-version: 0.21.0.2
+version: "0.21.0.2"
 tagline: Liquid Network full node
 description: Elements is an open source full node implementation to run the Liquid
   Network, a Bitcoin layer-2 solution enabling the fast, confidential settlement and
