--- a/kollider/umbrel-app.yml
+++ b/kollider/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: kollider
 category: Finance
 name: Kollider
-version: 1.0.5
+version: "1.0.5"
 tagline: Lightning-fast derivative trading
 description: >-
   Kollider lets you instantly trade perpetual contracts with low fees
