--- a/lightning-shell/umbrel-app.yml
+++ b/lightning-shell/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lightning-shell
 category: Lightning Node Management
 name: Lightning Shell
-version: 0.1.10
+version: "0.1.10"
 tagline: Web shell with a selection of LN node management utilities
 description: >
   Lightning Shell is a web shell for the Umbrel personal server that
