--- a/node-red/umbrel-app.yml
+++ b/node-red/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: node-red
 category: Automation
 name: Node-RED
-version: 2.0.6-12
+version: "2.0.6-12"
 tagline: Wire together the Internet of Things
 description: >-
   Node-RED is a visual programming tool for wiring together hardware
