--- a/ride-the-lightning/umbrel-app.yml
+++ b/ride-the-lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: ride-the-lightning
 category: Lightning Node Management
 name: Ride The Lightning
-version: 0.12.1
+version: "0.12.1"
 tagline: A powerful dashboard for the Lightning Network
 description: >-
   RTL is a full function, device agnostic, web user interface to help
