--- a/thunderhub/umbrel-app.yml
+++ b/thunderhub/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: thunderhub
 category: Lightning Node Management
 name: ThunderHub
-version: 0.12.30
+version: "0.12.30"
 tagline: Take full control of your Lightning node
 description: >-
   ThunderHub allows you to take full control of your Lightning node
