Tweak Lightning app wording

--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -13,7 +13,7 @@ description: >-
   Lightning, but also earn sats by routing payments on the network.
 
 
-  Connect Zeus Wallet, Zap, or any other wallet that supports the lndconnect protocol
+  Connect Zeus Wallet, Zap, or any other wallet that supports lndconnect
   to remotely manage and access your node from anywhere.
 
 
