--- a/jam/umbrel-app.yml
+++ b/jam/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: jam
-category: Wallets
+category: Finance
 name: Jam
 version: "0.0.5"
 tagline: A user-friendly UI for JoinMarket
