--- a/specter-desktop/umbrel-app.yml
+++ b/specter-desktop/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: specter-desktop
-category: Wallets
+category: Finance
 name: Specter Desktop
 version: "1.8.1"
 tagline: Multisig with hardware wallets made easy
