--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     environment:
       APP_HOST: $APP_NEXTCLOUD_IP
       APP_PORT: 80
+      PROXY_AUTH_ADD: "false"
+  
   db:
     image: mariadb:10.5.12@sha256:dfcba5641bdbfd7cbf5b07eeed707e6a3672f46823695a0d3aba2e49bbd9b1dd
     user: "1000:1000"
