--- a/core-lightning/docker-compose.yml
+++ b/core-lightning/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     command: npm run dev:backend
     restart: on-failure
     volumes:
-      - ./data:/data
+      - ${APP_DATA_DIR}/data/app:/data
     environment:
       PORT: "3006"
       VUE_APP_API_URL:
