Expose c-lightning-rest port

--- a/core-lightning/docker-compose.yml
+++ b/core-lightning/docker-compose.yml
@@ -26,6 +26,8 @@ services:
   lightning-rest:
     image: saubyk/c-lightning-rest:0.7.2
     restart: on-failure
+    ports:
+      - 1234:3001
     volumes:
       - "${APP_DATA_DIR}/data/lightning/lightning:/root/.lightning"
 
