--- a/core-lightning/docker-compose.yml
+++ b/core-lightning/docker-compose.yml
@@ -28,6 +28,8 @@ services:
     restart: on-failure
     ports:
       - 1234:3001
+    environment:
+      PROTOCOL: "http"
     volumes:
       - "${APP_DATA_DIR}/data/lightning/lightning:/root/.lightning"
 
