--- a/core-lightning/docker-compose.yml
+++ b/core-lightning/docker-compose.yml
@@ -22,6 +22,21 @@ services:
   #     TOR_PROXY_PORT: 9050
   #   ports:
   #     - "3006:3006"
+
+  bitcoin_rtl:
+    image: shahanafarooqui/rtl:0.12.3
+    restart: on-failure
+    ports:
+      - 1235:3000
+    environment:
+      LN_IMPLEMENTATION: CLT
+      LN_SERVER_URL: http://lightning-rest:3001/v1
+      MACAROON_PATH: /c-lightning-rest/certs
+      RTL_CONFIG_PATH: /data/
+      RTL_COOKIE_PATH: /data/.cookie
+    volumes:
+      - "${APP_DATA_DIR}/data/rtl:/data"
+      - "${APP_DATA_DIR}/data/c-lightning-rest/certs:/c-lightning-rest/certs"
   
   lightning-rest:
     image: saubyk/c-lightning-rest:0.7.2
@@ -31,6 +46,7 @@ services:
     environment:
       PROTOCOL: "http"
     volumes:
+      - "${APP_DATA_DIR}/data/c-lightning-rest/certs:/usr/src/app/certs"
       - "${APP_DATA_DIR}/data/lightning/lightning:/root/.lightning"
 
   lightning:
