--- a/core-lightning/docker-compose.yml
+++ b/core-lightning/docker-compose.yml
@@ -48,7 +48,7 @@ services:
       PROTOCOL: "http"
     volumes:
       - "${APP_DATA_DIR}/data/c-lightning-rest/certs:/usr/src/app/certs"
-      - "${APP_DATA_DIR}/data/lightningd/lightning:/root/.lightning"
+      - "${APP_DATA_DIR}/data/lightningd:/root/.lightning"
 
   lightningd:
     image: elementsproject/lightningd:v0.11.1
