--- a/core-lightning/docker-compose.yml
+++ b/core-lightning/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     environment:
       APP_PASSWORD: moneyprintergomoo
       LN_IMPLEMENTATION: CLT
-      LN_SERVER_URL: http://lightning-rest:3001/v1
+      LN_SERVER_URL: http://c-lightning-rest:3001/v1
       MACAROON_PATH: /c-lightning-rest/certs
       RTL_CONFIG_PATH: /data/
       RTL_COOKIE_PATH: /data/.cookie
