--- a/core-lightning/docker-compose.yml
+++ b/core-lightning/docker-compose.yml
@@ -64,7 +64,7 @@ services:
       - --bind-addr=10.21.21.123:9735
       - --addr=statictor:${TOR_PROXY_IP}:29051
       - --tor-service-password=${TOR_PASSWORD}
-      - --grpc-port 1236
+      - --grpc-port=1236
     volumes:
       - "${APP_DATA_DIR}/data/lightningd:/root/.lightning"
     networks:
