--- a/core-lightning/docker-compose.yml
+++ b/core-lightning/docker-compose.yml
@@ -10,7 +10,7 @@ services:
   #   volumes:
   #     - ${APP_DATA_DIR}/data/app:/data
   #   environment:
-  #     PORT: "3006"
+  #     PORT: "${APP_CORE_LIGHTNING_IP}"
   #     VUE_APP_API_URL:
   #     BACKUP_STATUS_FILE: /data/backup-status.json
   #     LND_REST_HIDDEN_SERVICE: rest.onion
@@ -21,7 +21,11 @@ services:
   #     TOR_PROXY_IP: tor
   #     TOR_PROXY_PORT: 9050
   #   ports:
-  #     - "3006:3006"
+  #     - "${APP_CORE_LIGHTNING_IP}:${APP_CORE_LIGHTNING_IP}"
+      # networks:
+      #   default:
+      #     ipv4_address: ${APP_CORE_LIGHTNING_IP}
+
 
   rtl:
     image: shahanafarooqui/rtl:0.12.3
@@ -31,42 +35,44 @@ services:
     environment:
       APP_PASSWORD: moneyprintergomoo
       LN_IMPLEMENTATION: CLT
-      LN_SERVER_URL: http://c-lightning-rest:3001/v1
+      LN_SERVER_URL: http://${APP_CORE_LIGHTNING_REST_IP}:${APP_CORE_LIGHTNING_REST_PORT}/v1
       MACAROON_PATH: /c-lightning-rest/certs
       RTL_CONFIG_PATH: /data/
       RTL_COOKIE_PATH: /data/.cookie
     volumes:
       - "${APP_DATA_DIR}/data/rtl:/data"
-      - "${APP_DATA_DIR}/data/c-lightning-rest/certs:/c-lightning-rest/certs"
+      - "${APP_CORE_LIGHTNING_REST_CERT_DIR}:/c-lightning-rest/certs"
   
   c-lightning-rest:
     image: saubyk/c-lightning-rest:0.7.2
     restart: on-failure
     ports:
-      - 1234:3001
+      - ${APP_CORE_LIGHTNING_REST_PORT}:${APP_CORE_LIGHTNING_REST_PORT}
     environment:
+      PORT: "${APP_CORE_LIGHTNING_REST_PORT}"
       PROTOCOL: "http"
     volumes:
-      - "${APP_DATA_DIR}/data/c-lightning-rest/certs:/usr/src/app/certs"
+      - "${APP_CORE_LIGHTNING_REST_CERT_DIR}:/usr/src/app/certs"
       - "${APP_DATA_DIR}/data/lightningd:/root/.lightning"
+    networks:
+      default:
+        ipv4_address: ${APP_CORE_LIGHTNING_REST_IP}
 
   lightningd:
     image: elementsproject/lightningd:v0.11.1
     restart: on-failure
     ports:
-      - 1236:1236
-      - 9734:9735
+      - ${APP_CORE_LIGHTNING_DAEMON_PORT}:9735
     command:
       - --bitcoin-rpcconnect=${APP_BITCOIN_NODE_IP}
       - --bitcoin-rpcuser=${APP_BITCOIN_RPC_USER}
       - --bitcoin-rpcpassword=${APP_BITCOIN_RPC_PASS}
       - --proxy=${TOR_PROXY_IP}:${TOR_PROXY_PORT}
-      - --bind-addr=10.21.21.123:9735
+      - --bind-addr=${APP_CORE_LIGHTNING_DAEMON_IP}:9735
       - --addr=statictor:${TOR_PROXY_IP}:29051
       - --tor-service-password=${TOR_PASSWORD}
-      - --grpc-port=1236
     volumes:
       - "${APP_DATA_DIR}/data/lightningd:/root/.lightning"
     networks:
       default:
-        ipv4_address: 10.21.21.123
+        ipv4_address: ${APP_CORE_LIGHTNING_DAEMON_IP}
