--- a/core-lightning/docker-compose.yml
+++ b/core-lightning/docker-compose.yml
@@ -6,30 +6,30 @@ services:
       APP_HOST: $APP_CORE_LIGHTNING_IP
       APP_PORT: $APP_CORE_LIGHTNING_PORT
 
-  # app:
-  #   build:
-  #     dockerfile: ./Dockerfile
-  #     context: ./
-  #   command: npm run dev:backend
-  #   restart: on-failure
-  #   volumes:
-  #     - ${APP_DATA_DIR}/data/app:/data
-  #   environment:
-  #     PORT: "${APP_CORE_LIGHTNING_PORT}"
-  #     VUE_APP_API_URL:
-  #     BACKUP_STATUS_FILE: /data/backup-status.json
-  #     LND_REST_HIDDEN_SERVICE: rest.onion
-  #     LND_GRPC_HIDDEN_SERVICE: grpc.onion
-  #     LIGHTNING_NETWORK: "regtest"
-  #     LIGHTNING_PORT: 8001
-  #     JSON_STORE_FILE: /data/state.json
-  #     TOR_PROXY_IP: tor
-  #     TOR_PROXY_PORT: 9050
-  #   ports:
-  #     - "${APP_CORE_LIGHTNING_PORT}:${APP_CORE_LIGHTNING_PORT}"
-      # networks:
-      #   default:
-      #     ipv4_address: ${APP_CORE_LIGHTNING_IP}
+  app:
+    build:
+      dockerfile: ./src/Dockerfile
+      context: ./src
+    command: npm run dev:backend
+    restart: on-failure
+    volumes:
+      - ${APP_DATA_DIR}/data/app:/data
+    environment:
+      PORT: "${APP_CORE_LIGHTNING_PORT}"
+      VUE_APP_API_URL:
+      BACKUP_STATUS_FILE: /data/backup-status.json
+      LND_REST_HIDDEN_SERVICE: rest.onion
+      LND_GRPC_HIDDEN_SERVICE: grpc.onion
+      LIGHTNING_NETWORK: "regtest"
+      LIGHTNING_PORT: 8001
+      JSON_STORE_FILE: /data/state.json
+      TOR_PROXY_IP: tor
+      TOR_PROXY_PORT: 9050
+    ports:
+      - "${APP_CORE_LIGHTNING_PORT}:${APP_CORE_LIGHTNING_PORT}"
+    networks:
+      default:
+        ipv4_address: ${APP_CORE_LIGHTNING_IP}
 
 
   rtl:
