--- a/core-lightning/torrc.template
+++ b/core-lightning/torrc.template
@@ -4,4 +4,4 @@ HiddenServicePort 80 $APP_PROXY_HOSTNAME:$APP_PROXY_PORT
 
 # Core Lightning REST Hidden Service
 HiddenServiceDir /data/app-$APP_ID-rest
-HiddenServicePort 80 $APP_CORE_LIGHTNING_REST_IP:$APP_CORE_LIGHTNING_REST_PORT
+HiddenServicePort $APP_CORE_LIGHTNING_REST_PORT $APP_CORE_LIGHTNING_REST_IP:$APP_CORE_LIGHTNING_REST_PORT
