--- a/core-lightning/docker-compose.yml
+++ b/core-lightning/docker-compose.yml
@@ -8,8 +8,8 @@ services:
 
   app:
     build:
-      dockerfile: ./src/Dockerfile
-      context: ./src
+      dockerfile: ${APP_DATA_DIR}/src/Dockerfile
+      context: ${APP_DATA_DIR}/src
     command: npm run dev:backend
     restart: on-failure
     volumes:
