Set HTTP scheme

--- a/core-lightning/docker-compose.yml
+++ b/core-lightning/docker-compose.yml
@@ -22,8 +22,8 @@ services:
       LIGHTNING_GRPC_PORT: ${APP_CORE_LIGHTNING_DAEMON_GRPC_PORT}
       LIGHTNING_REST_PORT: ${APP_CORE_LIGHTNING_REST_PORT}
       LIGHTNING_REST_MACAROON_PATH: "/c-lightning-rest/certs/access.macaroon"
-      LIGHTNING_REST_HIDDEN_SERVICE: ${APP_CORE_LIGHTNING_REST_HIDDEN_SERVICE}
-      LOCAL_HOST: ${DEVICE_DOMAIN_NAME}
+      LIGHTNING_REST_HIDDEN_SERVICE: http://${APP_CORE_LIGHTNING_REST_HIDDEN_SERVICE}
+      LOCAL_HOST: http://${DEVICE_DOMAIN_NAME}
     networks:
       default:
         ipv4_address: ${APP_CORE_LIGHTNING_IP}
