Bypass auth proxy for all apps that require public use or have client apps

--- a/bleskomat-server/docker-compose.yml
+++ b/bleskomat-server/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: $APP_BLESKOMAT_SERVER_IP
       APP_PORT: $APP_BLESKOMAT_SERVER_PORT
+      PROXY_AUTH_ADD: "false"
 
   db:
     image: postgres:10.20-stretch@sha256:130e08bb19199bd055e585e8938c5ebb0555dc13b445fad5b0bd727e4b75149c
