--- a/bluewallet/docker-compose.yml
+++ b/bluewallet/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: $APP_BLUEWALLET_LNDHUB_IP
       APP_PORT: $APP_BLUEWALLET_LNDHUB_PORT
+      PROXY_AUTH_ADD: "false"
 
   redis:
     image: "redis:6.2.2-buster@sha256:e10f55f92478715698a2cef97c2bbdc48df2a05081edd884938903aa60df6396"
