--- a/btcpay-server/docker-compose.yml
+++ b/btcpay-server/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: $APP_BTCPAY_SERVER_IP
       APP_PORT: $APP_BTCPAY_SERVER_PORT
+      PROXY_AUTH_ADD: "false"
 
   nbxplorer:
     image: nicolasdorier/nbxplorer:2.2.20@sha256:8f0e7f68513596e0a2555990d262169088a70204abe397bf18ba921f9b0608f3
