--- a/samourai-server/docker-compose.yml
+++ b/samourai-server/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: $APP_SAMOURAI_SERVER_IP
       APP_PORT: 8081
+      PROXY_AUTH_ADD: "false"
   db:
     image: louneskmt/dojo-db:1.5.0-low-mem@sha256:e82c23699196bcaf37fe021ca47eef1c53d18ba8a10290ae8dcfe7cb24dbb5e6
     init: true
