--- a/satsale/docker-compose.yml
+++ b/satsale/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: $APP_SATSALE_IP
       APP_PORT: 5000
+      PROXY_AUTH_ADD: "false"
   satsale:
     image: satsale/satsale:0.1.13@sha256:98380ad6c5166d83e627c4d1f4efdbcfd5b9217096f7fb26b287fda89eebccbb
     restart: on-failure
