--- a/sphinx-relay/docker-compose.yml
+++ b/sphinx-relay/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: $APP_SPHINX_RELAY_IP
       APP_PORT: $APP_SPHINX_RELAY_PORT
+      PROXY_AUTH_ADD: "false"
 
   sphinx-relay:
     container_name: sphinx-relay
