--- a/synapse/docker-compose.yml
+++ b/synapse/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: $APP_SYNAPSE_IP
       APP_PORT: $APP_SYNAPSE_PORT
+      PROXY_AUTH_ADD: "false"
 
   server:
     image: matrixdotorg/synapse:v1.42.0@sha256:10a1dd576504af002a1107d6d1edddc5bb891ccfc404218fbd99a15531cef742
