--- a/vaultwarden/docker-compose.yml
+++ b/vaultwarden/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: $APP_VAULTWARDEN_IP
       APP_PORT: $APP_VAULTWARDEN_PORT
+      PROXY_AUTH_ADD: "false"
 
   server:
     image: vaultwarden/server:1.22.2@sha256:fe2a236b792fb2304ef50f86f1c25076ac5b2748e1b776fce260ad12ad29188d
