--- a/agora/docker-compose.yml
+++ b/agora/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: $APP_AGORA_IP
       APP_PORT: 80
+      PROXY_AUTH_ADD: "false"
 
   filebrowser:
     image: filebrowser/filebrowser:v2.21.1@sha256:e1f43b1b8a1acb1d7cd5f934454e7a2ef571ea3bab48b0e1ed0fa97ef9df8d69
