--- a/gitea/docker-compose.yml
+++ b/gitea/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: $APP_GITEA_IP
       APP_PORT: $APP_GITEA_PORT
+      PROXY_AUTH_ADD: "false"
 
   server:
     image: gitea/gitea:1.15.2-rootless@sha256:6caabcf0e1a21a2d885f44c8f19693ce44ec3d443e2116f86a2937db453566a8
