--- a/pi-hole/docker-compose.yml
+++ b/pi-hole/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: $APP_PI_HOLE_IP
       APP_PORT: 80
+      PROXY_AUTH_ADD: "false"
   server:
     image: pihole/pihole:2022.04.3@sha256:fa050f8407fc9b63840025f7064763cc20f2b8dd30461852daabb2c33a8231f8
     # Pi-hole doesn't currently support running as non-root
