Update to prod umbrel-bitcoin image

--- a/bitcoin/docker-compose.yml
+++ b/bitcoin/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 3005
   
   server:
-    image: cookiemonster123/umbrel-bitcoin:master
+    image: getumbrel/umbrel-bitcoin:v0.3.0@sha256:115af951d7a4e696603c7468bcb4e119e02fe9c9deb28edb51d2e2d8207cab59
     depends_on: [bitcoind]
     restart: on-failure
     environment:
