Update to prod umbrel-lightning image

--- a/lightning/docker-compose.yml
+++ b/lightning/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 3006
 
   app:
-    image: cookiemonster123/umbrel-lightning:master
+    image: getumbrel/umbrel-lightning:v1.0.3@sha256:e20a0fc2113ffd2b0afce00aee0346ba2af961e793b8784fe712ed05f7c9522c
     restart: on-failure
     volumes:
       - "${APP_LIGHTNING_NODE_DATA_DIR}:/data/.lnd"
